--- a/cook_inlet_catalogs/catalogs/ctd_profiles_kb_small_mesh_2006.yaml
+++ b/cook_inlet_catalogs/catalogs/ctd_profiles_kb_small_mesh_2006.yaml
@@ -83,12 +83,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -152,12 +152,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -221,12 +221,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -290,12 +290,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -359,12 +359,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -428,12 +428,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -497,12 +497,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -566,12 +566,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -635,12 +635,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -704,12 +704,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -773,12 +773,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -842,12 +842,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -911,12 +911,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -980,12 +980,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1049,12 +1049,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1118,12 +1118,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1187,12 +1187,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1256,12 +1256,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1325,12 +1325,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1394,12 +1394,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1463,12 +1463,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1532,12 +1532,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1601,12 +1601,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1670,12 +1670,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1739,12 +1739,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1808,12 +1808,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1877,12 +1877,12 @@ entries:
           flip_yaxis: true
           height: 400
           hover_cols:
-          - Lon
-          - Station
-          - datetime
           - Lat
-          - Depth [m]
+          - Station
           - Temperature [C]
+          - Depth [m]
+          - Lon
+          - datetime
           invert: true
           kind: line
           shared_axes: true
@@ -1982,10 +1982,13 @@ metadata:
   header_names: null
   included: true
   key_variables:
-  - salt
   - temp
+  - salt
   map:
     c: station
+    clabel: ''
+    clim: null
+    cmap: null
     coastline: false
     color: k
     geo: true
