--- a/cook_inlet_catalogs/catalogs/moorings_kbnerr_bear_cove_seldovia.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_kbnerr_bear_cove_seldovia.yaml
@@ -54,13 +54,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - time
-          - sea_water_practical_salinity
-          - station
-          - z
-          - sea_water_temperature
-          - latitude
           - longitude
+          - sea_water_temperature
+          - station
+          - sea_water_practical_salinity
+          - latitude
+          - time
+          - z
           kind: line
           legend: top
           shared_axes: false
@@ -123,7 +123,7 @@ data:
       maptype: point
       maxLatitude: 59.44099
       maxLongitude: -151.72096
-      maxTime: '2025-09-11T14:45:00Z'
+      maxTime: '2025-10-23T16:45:00Z'
       minLatitude: 59.44099
       minLongitude: -151.72096
       minTime: '2004-01-01T09:00:00Z'
@@ -131,14 +131,14 @@ data:
         data:
           height: 300
           hover_cols:
-          - time
-          - sea_water_practical_salinity
-          - station
-          - z
-          - sea_water_temperature
-          - latitude
-          - water_surface_above_station_datum
           - longitude
+          - sea_water_temperature
+          - station
+          - sea_water_practical_salinity
+          - latitude
+          - time
+          - z
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -203,7 +203,7 @@ data:
       maptype: point
       maxLatitude: 59.44099
       maxLongitude: -151.72096
-      maxTime: '2025-08-11T18:30:00Z'
+      maxTime: '2025-09-08T19:15:00Z'
       minLatitude: 59.44099
       minLongitude: -151.72096
       minTime: '2004-01-01T09:00:00Z'
@@ -211,14 +211,14 @@ data:
         data:
           height: 300
           hover_cols:
-          - time
-          - sea_water_practical_salinity
-          - station
-          - z
-          - sea_water_temperature
-          - latitude
-          - water_surface_above_station_datum
           - longitude
+          - sea_water_temperature
+          - station
+          - sea_water_practical_salinity
+          - latitude
+          - time
+          - z
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -245,8 +245,8 @@ metadata:
   header_names: null
   included: true
   key_variables:
-  - salt
   - temp
+  - salt
   - ssh
   map:
     c: station
@@ -287,7 +287,7 @@ metadata:
   maptype: point
   maxLatitude: 59.7262
   maxLongitude: -151.04865
-  maxTime: '2025-09-11T14:45:00Z'
+  maxTime: '2025-10-23T16:45:00Z'
   minLatitude: 59.44099
   minLongitude: -151.72096
   minTime: '2004-01-01T09:00:00Z'
@@ -298,7 +298,7 @@ metadata:
     \    \nStation mappings from AOOS/ERDDAP to KBNERR station list:\n* nerrs_kacsdwq\
     \ :: kacsdwq\n* nerrs_kacsswq :: kacsswq\n\n* cdmo_nerrs_bearcove :: This is a\
     \ different station than kacbcwq, which was active 2002-2003 while this is in\
-    \ 2015. They are also in different locations.\n    \nMore information: https://accs.uaa.alaska.edu/kbnerr/\n"
+    \ 2015. They are also in different locations.\n    \nMore information: [https://accs.uaa.alaska.edu/kbnerr/](https://accs.uaa.alaska.edu/kbnerr/)\n"
   time: From 2004 to present day, variable
 user_parameters: {}
 version: 2
